fix: patch fcm token and coordinates and add swagger
